@@ -13,6 +13,7 @@ New features and enhancements (highlights)
 
 Bug fixes and other improvements
 
+	- Fix Fl_Tree::insert() with pos out ouf range (issue #18).
 	- Fix Fl_GIF_Image Color Table handling (STR 3491).
 	- Make sure not to access Fl_Menu_ widgets if the widget gets
 	  deleted while the menu (pulldown) is open (STR 3503).
